added viewmodel of tweets, globaltimeline, friendstimeline, userlist and settings; already added some functions to it; changed some api settings of web server

--- a/Twitterroo-Client/src/viewmodels/dashboard/dashboard.html
+++ b/Twitterroo-Client/src/viewmodels/dashboard/dashboard.html
@@ -1,14 +1,10 @@
 <template>
   <section class="ui grid segment">
-    <div class="four wide column">
-      test 1
-      <!--<compose view-model="../donate/donate"></compose>-->
+    <div class="six wide column">
+      <compose class="six wide column" view-model="../personalTweetlist/personalTweetlist"></compose>
     </div>
-    <div class="four wide column">
-      <compose class="four wide column" view-model="../tweetlist/tweetlist"></compose>
-    </div>
-    <div class="four wide column">
-      <article class="four wide column">test 3</article>
+    <div class="six wide column">
+      <article class="six wide column">test 3</article>
       <!--<compose class="four wide column" view-model="../candidates/candidates"></compose>-->
     </div>
     <div class="four wide  column">
