changed views for client spa; made first steps to admin account

--- a/Twitterroo-Client/src/viewmodels/dashboard/dashboard.html
+++ b/Twitterroo-Client/src/viewmodels/dashboard/dashboard.html
@@ -1,15 +1,13 @@
 <template>
   <section class="ui grid segment">
-    <div class="six wide column">
+    <div class="twelve wide column">
       <compose class="six wide column" view-model="../personalTweetlist/personalTweetlist"></compose>
     </div>
-    <div class="six wide column">
-      <article class="six wide column">test 3</article>
-      <!--<compose class="four wide column" view-model="../candidates/candidates"></compose>-->
-    </div>
     <div class="four wide  column">
-      <article class="ui column">test 4</article>
-      <!--<compose class="ui column" view-model="../stats/stats"></compose>-->
+      <article class="ui column">
+        <h3 class="ui dividing header">Statistics</h3>
+      </article>
+      <a route-href="route: settings">test</a>
     </div>
   </section>
 </template>
